Create styling file

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,10 @@
     <title>Activity Tracker</title>
   </head>
   <body>
-    <main>
       <h1 class='site-title'>GitFit</h1>
       <h2 id='date' class= 'date'>Date</h2>
-      <h2 id='greeting' class= 'greeting'>Hello, User<h2>
+      <h2 id='greeting' class= 'greeting'>Hello, User</h2>   
+    <main>
       <article class= 'user-info'>
         <h2 class= 'user-info_title'>Your Info</h2>
         <p id='user-name' class='user-info_content'>name</p>
