Display comparison between average step goal and user step goal

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         <p id='user-name' class='user-info_content'>name</p>
         <p id='user-email' class='user-info_content'>email</p>
         <p id='user-address' class='user-info_content'>address</p>
-        <p id='user-step-goal' class='user-info_content'>daily step goal</p>
+        <p id='user-step-goal-comparison' class='user-info_content'>daily step goal comparison</p>
         <p id='user-friends-list' class='user-info_content'>friends list</p>
       </article>
       <article class= 'activity-data'>
