Move header into div

--- a/src/index.html
+++ b/src/index.html
@@ -3,20 +3,25 @@
   <head>
     <meta charset="UTF-8">
     <title>Activity Tracker</title>
+    <link rel="stylesheet" type="text/css" href="./styles.css">
   </head>
   <body>
+    <section class='header'>
       <h1 class='site-title'>GitFit</h1>
       <h2 id='date' class= 'date'>Date</h2>
-      <h2 id='greeting' class= 'greeting'>Hello, User</h2>   
+      <h2 id='greeting' class= 'greeting'>Hello, User</h2>  
+    </section> 
     <main>
-      <article class= 'user-info'>
-        <h2 class= 'user-info_title'>Your Info</h2>
-        <p id='user-name' class='user-info_content'>name</p>
-        <p id='user-email' class='user-info_content'>email</p>
-        <p id='user-address' class='user-info_content'>address</p>
-        <p id='user-step-goal' class='user-info_content'>daily step goal</p>
-        <p id='user-friends-list' class='user-info_content'>friends list</p>
-      </article>
+      <div>
+        <article class= 'user-info'>
+          <h2 class= 'user-info_title'>Your Info</h2>
+          <p id='user-name' class='user-info_content'>name</p>
+          <p id='user-email' class='user-info_content'>email</p>
+          <p id='user-address' class='user-info_content'>address</p>
+          <p id='user-step-goal' class='user-info_content'>daily step goal</p>
+          <p id='user-friends-list' class='user-info_content'>friends list</p>
+        </article>
+      </div> 
       <article class= 'activity-data'>
         <h2 class= 'activity-data_title'>Activity</h2>
         <section class='activity-data_timeline'>
