Move user info and wellness info into sperate divs under main

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
       <h2 id='greeting' class= 'greeting'>Hello, User</h2>  
     </section> 
     <main>
-      <div>
+      <div class='user-area'>
         <article class= 'user-info'>
           <h2 class= 'user-info_title'>Your Info</h2>
           <p id='user-name' class='user-info_content'>name</p>
@@ -22,40 +22,42 @@
           <p id='user-friends-list' class='user-info_content'>friends list</p>
         </article>
       </div> 
-      <article class= 'activity-data'>
-        <h2 class= 'activity-data_title'>Activity</h2>
-        <section class='activity-data_timeline'>
-        </section>
-        <section class='activity-data_activity-minutes'>
-        </section>
-        <section class='activity-data_steps'>
-        </section>
-        <section class='activity-data_distance'>
-        </section>
-        <section class='activity-data_rankings'>
-          <h3 class='activity-data_steps-ranking'></h3>
-          <h3 class='activity-data_activity-minutes-ranking'></h3>
-          <h3 class='activity-data_stairs-ranking'></h3>
-        </section>
-      </article>
-      <article class= 'hydration-data'>
-        <h2 class= 'hydration-data_title'>Hydration</h2>
-        <section class='hydration-data_today'>
-        </section>
-        <section class='hydration-data_last-week'>
-        </section>
-      </article>
-      <article class= 'sleep-data'>
-        <h2 class= 'sleep-data_title'>Sleep</h2>
-        <section class='sleep-data_last-night'>
-        </section>
-        <section class='sleep-data_last-week'>
-        </section>
-        <section class='sleep-data_averages'>
-          <h3 id='all-time-average-sleep-quality' class='sleep-data_average-quality'>All Time Average Quality</h3>
-          <h3 id='all-time-average-sleep-hours' class='sleep-data_average-hours'>All Time Average Hours</h3>
-        </section>
-      </article>
+      <div class='user-info-area'>
+        <article class= 'activity-data'>
+          <h2 class= 'activity-data_title'>Activity</h2>
+          <section class='activity-data_timeline'>
+          </section>
+          <section class='activity-data_activity-minutes'>
+          </section>
+          <section class='activity-data_steps'>
+          </section>
+          <section class='activity-data_distance'>
+          </section>
+          <section class='activity-data_rankings'>
+            <h3 class='activity-data_steps-ranking'></h3>
+            <h3 class='activity-data_activity-minutes-ranking'></h3>
+            <h3 class='activity-data_stairs-ranking'></h3>
+          </section>
+        </article>
+        <article class= 'hydration-data'>
+          <h2 class= 'hydration-data_title'>Hydration</h2>
+          <section class='hydration-data_today'>
+          </section>
+          <section class='hydration-data_last-week'>
+          </section>
+        </article>
+        <article class= 'sleep-data'>
+          <h2 class= 'sleep-data_title'>Sleep</h2>
+          <section class='sleep-data_last-night'>
+          </section>
+          <section class='sleep-data_last-week'>
+          </section>
+          <section class='sleep-data_averages'>
+            <h3 id='all-time-average-sleep-quality' class='sleep-data_average-quality'>All Time Average Quality</h3>
+            <h3 id='all-time-average-sleep-hours' class='sleep-data_average-hours'>All Time Average Hours</h3>
+          </section>
+        </article>
+      </div>
     </main>
     <script type="text/javascript" src="../data/users.js"></script>
     <script type="text/javascript" src="../data/hydration.js"></script>
