Add bubbles around header innerTexts

--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,15 @@
   </head>
   <body>
     <section class='header'>
-      <h1 class='site-title'>GitFit</h1>
-      <h2 id='greeting' class= 'greeting'>Hello, User</h2>  
-      <h2 id='date' class= 'date'>Date</h2>
+      <div class='bubble heading'>
+        <h1 class='site-title'>GitFit</h1>
+      </div>
+      <div class='bubble'>
+        <h2 id='greeting' class= 'greeting'>Hello, User</h2> 
+      </div> 
+      <div class='bubble'>
+        <h2 id='date' class= 'date'>Date</h2>
+      </div>
     </section> 
     <main>
       <div class='user-area'>
@@ -24,9 +30,9 @@
       </div> 
       <div class='user-info-area'>
         <div class='activity genre'>
-          <h2 class= 'activity-data_title'>Activity</h2>
+          <!-- <h2 class= 'activity-data_title'>Activity</h2> -->
           <article class='activity-data-today widget'>
-            <h3>Activity Today</h3>>
+            <h3>Activity Today</h3>
             <section class='activity-data_activity-minutes'>
             </section>
             <section class='activity-data_steps'>
@@ -45,7 +51,7 @@
           </article>
         </div>
         <div class='hydration genre'>
-          <h2 class= 'hydration-data_title'>Hydration</h2>
+          <!-- <h2 class= 'hydration-data_title'>Hydration</h2> -->
           <article class='hydration-data-today widget'>
             <h3>Hydr8 2Day</h3>
           </article>
@@ -54,7 +60,7 @@
           </article>
         </div>
         <div class='sleep genre'>
-          <h2 class= 'sleep-data_title'>Sleep</h2>
+          <!-- <h2 class= 'sleep-data_title'>Sleep</h2> -->
           <article class='sleep-data-last-night widget'>
             <h3>ZZZ's last Night</h3>
             <section class='sleep-data_last-night'>
