Add rounded borders to bubble

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
       </div>
     </section> 
     <main>
-      <div class='user-area'>
+      <div class='user-area bubble'>
         <article class= 'user-info'>
           <h2 class= 'user-info_title'>Your Info</h2>
           <p id='user-name' class='user-info_content'>name</p>
