Add comments to organize html

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
       </div>
     </section> 
     <main>
+<!-- User info widget -->
       <div class='user-area bubble'>
         <article class= 'user-info'>
           <h2 class= 'user-info_title'>Your Info</h2>
@@ -29,8 +30,8 @@
         </article>
       </div> 
       <div class='user-info-area'>
+<!-- Activity Widgets  -->
         <div class='activity genre'>
-          <!-- <h2 class= 'activity-data_title'>Activity</h2> -->
           <article class='activity-data-today widget'>
             <h3>Activity Today</h3>
             <section class='activity-data_activity-minutes'>
@@ -50,8 +51,8 @@
             <h3 class='activity-data_stairs-ranking'></h3>
           </article>
         </div>
+<!-- Hydration Widgets -->
         <div class='hydration genre'>
-          <!-- <h2 class= 'hydration-data_title'>Hydration</h2> -->
           <article class='hydration-data-today widget'>
             <h3>Hydr8 2Day</h3>
           </article>
@@ -59,8 +60,8 @@
             <h3>Hydr8 All Week</h3>
           </article>
         </div>
+<!-- Sleep Widgets -->
         <div class='sleep genre'>
-          <!-- <h2 class= 'sleep-data_title'>Sleep</h2> -->
           <article class='sleep-data-last-night widget'>
             <h3>ZZZ's last Night</h3>
             <section class='sleep-data_last-night'>
