Debug identification of best sleepers

--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,12 @@
         <h1 class='site-title'>GitFit</h1>
       </div>
       <div class='bubble'>
-        <h2 id='greeting' class= 'greeting'>Hello, User</h2> 
-      </div> 
+        <h2 id='greeting' class= 'greeting'>Hello, User</h2>
+      </div>
       <div class='bubble'>
         <h2 id='date' class= 'date'>Date</h2>
       </div>
-    </section> 
+    </section>
     <main>
 <!-- User info widget -->
       <div class='user-area bubble'>
@@ -28,7 +28,7 @@
           <p id='user-step-goal' class='user-info_content'>daily step goal</p>
           <p id='user-friends-list' class='user-info_content'>friends list</p>
         </article>
-      </div> 
+      </div>
       <div class='user-info-area'>
 <!-- Activity Widgets  -->
         <div class='activity genre'>
@@ -88,6 +88,7 @@
     <script type="text/javascript" src="../data/activity.js"></script>
     <script type="text/javascript" src="../src/User.js"></script>
     <script type="text/javascript" src="../src/UserRepository.js"></script>
+    <script type="text/javascript" src="../src/SleepRepository.js"></script>
     <script type="text/javascript" src="./scripts.js"></script>
   </body>
 </html>
