--- a/src/index.html
+++ b/src/index.html
@@ -58,6 +58,8 @@
           </article>
           <article class='hydration-data-week widget'>
             <h3>Hydr8 All Week</h3>
+            <canvas id='hydration-data-week_chart' class='hydration-data-week_chart'>
+            </canvas>
           </article>
         </div>
 <!-- Sleep Widgets -->
@@ -86,9 +88,13 @@
     <script type="text/javascript" src="../data/hydration.js"></script>
     <script type="text/javascript" src="../data/sleep.js"></script>
     <script type="text/javascript" src="../data/activity.js"></script>
+    <script type="text/javascript" src="../src/HydrationLog.js"></script>
+    <script type="text/javascript" src="../src/SleepLog.js"></script>
+    <!-- <script type="text/javascript" src="../src/ActivityLog.js"></script> -->
     <script type="text/javascript" src="../src/User.js"></script>
     <script type="text/javascript" src="../src/UserRepository.js"></script>
     <script type="text/javascript" src="../src/SleepRepository.js"></script>
+    <script type="text/javascript" src="../node_modules/chart.js/dist/Chart.js"></script>
     <script type="text/javascript" src="./scripts.js"></script>
   </body>
 </html>
