Play with inline styling for chart

--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
           </article>
           <article class='hydration-data-week widget'>
             <h3>Hydr8 All Week</h3>
-            <canvas id='hydration-data-week_chart' class='hydration-data-week_chart'>
+            <canvas id='hydration-data-week_chart' class='hydration-data-week_chart' height='600' width='400'>
             </canvas>
           </article>
         </div>
