Display rough last nights sleep chart

--- a/src/index.html
+++ b/src/index.html
@@ -66,6 +66,7 @@
         <div class='sleep genre'>
           <article class='sleep-data-last-night widget'>
             <h3>ZZZ's last Night</h3>
+            <canvas id='sleep-data-last-night_chart'></canvas>
             <section class='sleep-data_last-night'>
             </section>
           </article>
