Create rough all time sleep quality chart

--- a/src/index.html
+++ b/src/index.html
@@ -79,6 +79,7 @@
             <h3>ZZZ's All Time</h3>
             <section class='sleep-data_averages'>
               <h3 id='all-time-average-sleep-quality' class='sleep-data_average-quality'>All Time Average Quality</h3>
+              <canvas id='sleep-data-all-time_chart'></canvas>
               <h3 id='all-time-average-sleep-hours' class='sleep-data_average-hours'>All Time Average Hours</h3>
             </section>
           </article>
