Create weekly activity chart

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
             </section>
           </article>
           <article class='activity-data-week widget'>
-            <h3>Activity This Week</h3>
+            <canvas id='activity-data-week_chart'></canvas>
           </article>
           <article class='activity-data_rankings widget'>
             <h3>Activity Rankings</h3>
