Display user's step goal

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Activity Tracker</title>
+    <title>GitFit</title>
     <link rel="stylesheet" type="text/css" href="./styles.css">
   </head>
   <body>
@@ -11,22 +11,20 @@
         <h1 class='site-title'>GitFit</h1>
       </div>
       <div class='bubble'>
-        <h2 id='greeting' class= 'greeting'>Hello, User</h2>
+        <h2 id='greeting' class='greeting'>Hello, User</h2>
       </div>
       <div class='bubble'>
-        <h2 id='date' class= 'date'>Date</h2>
+        <h2 id='date' class='date'>Date</h2>
       </div>
     </section>
     <main>
 <!-- User info widget -->
       <div class='user-area bubble'>
-        <article class= 'user-info'>
+        <article class='user-info'>
           <h2 class= 'user-info_title'>Your Info</h2>
-          <p id='user-name' class='user-info_content'>name</p>
-          <p id='user-email' class='user-info_content'>email</p>
-          <p id='user-address' class='user-info_content'>address</p>
-          <p id='user-step-goal' class='user-info_content'>daily step goal</p>
-          <p id='user-friends-list' class='user-info_content'>friends list</p>
+          <p id='user-name' class='user-info_content'>Name</p>
+          <p id='user-step-goal' class='user-info_content'>Daily Step Goal</p>
+          <p id='user-friends-list' class='user-info_content'>Friends List</p>
         </article>
       </div>
       <div class='user-info-area'>
