Add today's active minutes display

--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,8 @@
           <article class='activity-data-today widget'>
             <h3>Activity Today</h3>
             <section class='activity-data_activity-minutes'>
+              <h4 id='activity-data_today-minutes'></h4>
+              <h5>Minutes Active</h5>
             </section>
             <section class='activity-data_steps'>
             </section>
