Display users step count for today

--- a/src/index.html
+++ b/src/index.html
@@ -37,8 +37,12 @@
               <h5>Minutes Active</h5>
             </section>
             <section class='activity-data_steps'>
+              <h4 id='activity-data_today-steps'></h4>
+              <h5>Step Count</h5>
             </section>
             <section class='activity-data_distance'>
+              <h4 id='activity-data_today-distance'></h4>
+              <h5>Distance Walked</h5>
             </section>
           </article>
           <article class='activity-data-week widget'>
