Add today's hydration chart

--- a/src/index.html
+++ b/src/index.html
@@ -60,10 +60,10 @@
 <!-- Hydration Widgets -->
         <div class='hydration genre'>
           <article class='hydration-data-today widget'>
-            <h3>Hydr8 2Day</h3>
+            <canvas id='hydration-data_today_chart'></canvas>
           </article>
           <article class='hydration-data-week widget'>
-            <canvas id='hydration-data-week_chart' class='hydration-data-week_chart' >
+            <canvas id='hydration-data-week_chart' class='hydration-data-week_chart'>
             </canvas>
           </article>
         </div>
