Display user's step goal compared to average

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
           <h2 class= 'user-info_title'>Your Info</h2>
           <p id='user-name' class='user-info_content'>Name</p>
           <p id='user-step-goal' class='user-info_content'>Daily Step Goal</p>
+          <p id='user-step-goal_comparison' class='user-info_content'>Step Goal Comparison</p>
           <p id='user-friends-list' class='user-info_content'>Friends List</p>
         </article>
       </div>
