Format number displays

--- a/src/index.html
+++ b/src/index.html
@@ -18,35 +18,40 @@
           <article class='activity-numbers widget'>
             <h3>Activity Today</h3>
             <div class='activity-numbers_stats'>
-              <span class='activity-data_activity-minutes'>
-                <h4 id='activity-data_today-minutes'></h4>
-                <h5>Minutes Active</h5>
-              </span>
+              <div class='bottom-stats'>
+                <span class='activity-data_activity-minutes'>
+                  <h2 class='minutes' id='activity-data_today-minutes'></h4>
+                  <h5>Active Minutes</h5>
+                </span>
+                <span class='activity-data_distance'>
+                  <h2 class='distance' id='activity-data_today-distance'></h4>
+                  <h5>Miles Walked</h5>
+                </span>
+              </div>
               <span class='activity-data_steps'>
-                <h4 id='activity-data_today-steps'></h4>
-                <h5>Step Count</h5>
-              </span>
-              <span class='activity-data_distance'>
-                <h4 id='activity-data_today-distance'></h4>
-                <h5>Miles Walked</h5>
+                <h2 class='steps' id='activity-data_today-steps'></h4>
+                <h5>Steps</h5>
               </span>
             </div>
           </article>
           <article class='activity-numbers widget'>
             <h3>Activity Rankings</h3>
             <div class='activity-numbers_stats'>
-              <span class='activity-data_activity-minutes'>
-                <h4 id='activity-data_today-minutes'></h4>
-                <h5>Minutes Active</h5>
-              </span>
+              <div class='bottom-stats'>
+                <span class='activity-data_activity-minutes'>
+                  <h2 class='minutes' id='activity-data_today-minutes'></h4>
+                  <h5>Active Minutes</h5>
+                </span>
+                <span class='activity-data_distance'>
+                  <h2 class='distance' id='activity-data_today-distance'></h4>
+                  <h5>Miles Walked</h5>
+                </span>
+              </div>
               <span class='activity-data_steps'>
-                <h4 id='activity-data_today-steps'></h4>
-                <h5>Step Count</h5>
+                <h2 class='steps' id='activity-data_today-steps'></h4>
+                <h5>Steps</h5>
               </span>
-              <span class='activity-data_distance'>
-                <h4 id='activity-data_today-distance'></h4>
-                <h5>Miles Walked</h5>
-              </span>
+              </div>
             </div>
           </article>
         </div>
@@ -62,6 +67,7 @@
         </article>
         <article class='hydration-data-today widget'>
           <canvas id='hydration-data_today_chart'></canvas>
+          <h3 id='hydration-data_today_number'>OUNCES</h3>
         </article>
       </section>
 <!-- Sleep Widgets -->
