--- a/src/index.html
+++ b/src/index.html
@@ -88,15 +88,17 @@
     <footer class='user-info'>
         <h2 class='user-info_content_title'>Your Info</h2>
         <div class='info-box'>
-          <p>Name:</p>
-          <p id='user-name'>Name</p>
+          <h4>Name:</h4>
+          <h3 id='user-name'>Name</h3>
         </div>
         <div class='info-box'>
-          <p>Your Step Goal:</p><p id='user-step-goal'>Daily Step Goal</p><p id='user-step-goal_comparison'>Step Goal Comparison</p>
+          <h4>Step Goal:</h4>
+          <h3 id='user-step-goal'>Daily Step Goal</h3>
+          <p id='user-step-goal_comparison'>Step Goal Comparison</p>
         </div>
         <div class='info-box'>
-          <p>Friends:</p>
-          <p id='user-friends-list'>Friends List</p>
+          <h4>Friends:</h4>
+          <h3 id='user-friends-list'>Friends List</h3>
         </div>
     </footer>
     <script type="text/javascript" src="../data/users.js"></script>
