--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,9 @@
           </canvas>
         </article>
         <article class='hydration-data-today widget'>
-          <canvas id='hydration-data_today_chart'></canvas>
+          <div class='hydration-doughnut-wrapper'>
+            <canvas id='hydration-data_today_chart'></canvas>
+          </div>
           <h3 id='hydration-data_today_number'>OUNCES</h3>
         </article>
       </section>
@@ -74,10 +76,18 @@
       <section class='sleep genre'>
         <div class='small-widgets'>
           <article class='sleep-data-doughnut widget'>
-            <canvas id='sleep-data-last-night_chart'></canvas>
+            <h3>Last Night's Sleep</h3>
+            <h4 id='sleep-data-last-night-hours_number'>Hours</h4>
+            <div class='sleep-doughnut-wrapper'>
+              <canvas id='sleep-data-last-night-quality_chart'></canvas>
+            </div>
           </article>
           <article class='sleep-data-doughnut widget'>
-            <canvas id='sleep-data-all-time_chart'></canvas>
+            <h3>Average Sleep</h3>
+            <h4 id='sleep-data-all-time-hours_number'>Average Hours</h4>
+            <div class='sleep-doughnut-wrapper'>
+              <canvas id='sleep-data-all-time-quality_chart'></canvas>
+            </div>
           </article>
         </div>
         <article class='sleep-data-week widget'>
@@ -85,7 +95,7 @@
         </article>
       </section>
     </main>
-    <footer class='user-info'>
+    <aside class='user-info'>
         <h2 class='user-info_content_title'>Your Info</h2>
         <div class='info-box'>
           <h4>Name:</h4>
@@ -100,7 +110,7 @@
           <h4>Friends:</h4>
           <h3 id='user-friends-list'>Friends List</h3>
         </div>
-    </footer>
+    </aside>
     <script type="text/javascript" src="../data/users.js"></script>
     <script type="text/javascript" src="../data/hydration.js"></script>
     <script type="text/javascript" src="../data/sleep.js"></script>
