Explain sleep quality data with subtitle

--- a/src/index.html
+++ b/src/index.html
@@ -81,6 +81,7 @@
             <div class='sleep-doughnut-wrapper'>
               <canvas id='sleep-data-last-night-quality_chart'></canvas>
             </div>
+            <p id='sleep-data-last-night-quality_value' class='sleep-doughnut-headline'>X out of 5</p>
           </article>
           <article class='sleep-data-doughnut widget'>
             <h3>Average Sleep</h3>
@@ -88,6 +89,7 @@
             <div class='sleep-doughnut-wrapper'>
               <canvas id='sleep-data-all-time-quality_chart'></canvas>
             </div>
+            <p id='sleep-data-all-time-quality_value' class='sleep-doughnut-headline'>X out of 5</p>
           </article>
         </div>
         <article class='sleep-data-week widget'>
