--- a/src/index.html
+++ b/src/index.html
@@ -125,6 +125,7 @@
     <script type="text/javascript" src="../src/SleepRepository.js"></script>
     <script type="text/javascript" src="../src/ActivityRepository.js"></script>
     <script type="text/javascript" src="../node_modules/chart.js/dist/Chart.js"></script>
+    <script type="text/javascript" src="../src/charts.js"></script>
     <script type="text/javascript" src="./scripts.js"></script>
   </body>
 </html>
