--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
                 </span>
                 <span class='activity-data_distance'>
                   <h2 class='distance' id='activity-data_rank-distance'></h4>
-                  <h5>Miles Walked</h5>
+                  <h5>Stairs Climbed</h5>
                 </span>
               </div>
               <span class='activity-data_steps'>
