Improve number readability with shadows

--- a/src/index.html
+++ b/src/index.html
@@ -41,17 +41,17 @@
             <div class='activity-numbers_stats'>
               <div class='bottom-stats'>
                 <span class='activity-data_activity-minutes'>
-                  <h2 class='minutes' id='activity-data_rank-minutes'></h4>
-                  <h5>Active Minutes</h5>
+                  <h2 class='minutes' id='activity-data_rank-minutes'></h2>
+                  <h5>in Active Minutes</h5>
                 </span>
-                <span class='activity-data_distance'>
-                  <h2 class='distance' id='activity-data_rank-distance'></h4>
-                  <h5>Stairs Climbed</h5>
+                <span class='activit1-data_distance'>
+                  <h2 class='stairs' id='activity-data_rank-distance'></h2>
+                  <h5>in Stairs Climbed</h5>
                 </span>
               </div>
               <span class='activity-data_steps'>
-                <h2 class='steps' id='activity-data_rank-steps'></h4>
-                <h5>Steps</h5>
+                <h2 class='steps' id='activity-data_rank-steps'></h2>
+                <h5>in Steps</h5>
               </span>
               </div>
             </div>
