Display daily and average sleep duration

--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,8 @@
         <div class='small-widgets'>
           <article class='sleep-data-doughnut widget'>
             <h3 class='widget-heading'>Last Night's Sleep</h3>
-            <h4 id='sleep-data-last-night-hours_number'>Hours</h4>
+            <p class ='sleep-hours'>Hours</p>
+            <h2 class ='sleep-hours-number' id='sleep-data-last-night-hours_number'></h2>
             <div class='sleep-doughnut-wrapper'>
               <canvas id='sleep-data-last-night-quality_chart'></canvas>
             </div>
@@ -87,7 +88,8 @@
           </article>
           <article class='sleep-data-doughnut widget'>
             <h3 class='widget-heading'>Average Sleep</h3>
-            <h4 id='sleep-data-all-time-hours_number'>Average Hours</h4>
+            <p class ='sleep-hours'>Average Hours</p>
+            <h2 class ='sleep-hours-number' id='sleep-data-all-time-hours_number'></h2>
             <div class='sleep-doughnut-wrapper'>
               <canvas id='sleep-data-all-time-quality_chart'></canvas>
             </div>
