--- a/src/index.html
+++ b/src/index.html
@@ -78,6 +78,9 @@
       <section class='sleep genre'>
         <div class='small-widgets'>
           <article class='sleep-data-doughnut widget'>
+            <aside class="help-tip">
+              <p>GitFit recommends you aim for at least 8 hours of high-quality sleep a night. Our 'quality' metric is on a scale of 1-5 and is based on your self-reports.</p>
+            </aside>
             <h3 class='widget-heading'>Last Night's Sleep</h3>
             <p class ='sleep-hours'>Hours</p>
             <h2 class ='sleep-hours-number' id='sleep-data-last-night-hours_number'></h2>
@@ -87,6 +90,9 @@
             <p id='sleep-data-last-night-quality_value' class='sleep-doughnut-headline'>X out of 5</p>
           </article>
           <article class='sleep-data-doughnut widget'>
+            <aside class="help-tip">
+              <p>This is the inline help tip! It can contain all kinds of HTML. Style it as you please.</p>
+            </aside>
             <h3 class='widget-heading'>Average Sleep</h3>
             <p class ='sleep-hours'>Average Hours</p>
             <h2 class ='sleep-hours-number' id='sleep-data-all-time-hours_number'></h2>
